# Industrial-Electric-Motor-Digital-twin-Silumator

./: .gitignore  AUTOMATIC_MAINTENANCE_IMPLEMENTATION.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/: PHASE6_IMPROVEMENTS.md  PHASE6_SUMMARY.md
notebooks/: data_sanity.ipynb  phase1_test.ipynb  phase4_cmapss_explore.ipynb  phase4d_bearing_vibration_stats.ipynb  phase5_test.ipynb
notebooks.py/: phase1_test.ipynb
notebooks/eda_results/stats/: correlations.csv  lag_correlations.csv  maintenance_stats.csv  missingness.csv  per_motor_summary.csv  regime_stats.csv  sensor_distributions.csv
simulator/: config.py  config_realistic.py  dataset_builder.py  digital_twin.py  example_digital_twin.py  factory.py  maintenance.py  motor.py  noise.py  physics.py  priors.py  sensor_imperfections.py  splitter.py  state.py
tests/: TEST_SUMMARY_REPORT.md  quick_perf_test.py  test_diagnostic.py  test_global_timeline.py  test_instantaneous_comprehensive.py  test_live_mode_comprehensive.py
ui/: README.md  app.py  simulator_manager.py
ui/components/: __init__.py  advanced_charts.py  charts.py  controls.py  metrics.py  verification_charts.py
ui/strategies/: __init__.py  base_strategy.py  instantaneous_strategy.py  live_mode_strategy.py
